# SDD_navigator_internship_project

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  PROCESS.md  README.md  requirements.yaml  tasks.yaml
.github/workflows/: ci.yml
crates/sdd-cli/: Cargo.toml
crates/sdd-cli/src/: main.rs
crates/sdd-cli/tests/: cli_tests.rs
crates/sdd-core/: Cargo.toml
crates/sdd-core/src/: coverage.rs  error.rs  lib.rs  models.rs  parser.rs  scanner.rs
crates/sdd-core/tests/: integration_tests.rs
crates/sdd-server/: Cargo.toml
crates/sdd-server/src/: errors.rs  handlers.rs  main.rs  routes.rs  state.rs
crates/sdd-server/tests/: api_tests.rs
fixtures/empty-project/: requirements.yaml
fixtures/malformed-yaml/: requirements.yaml
fixtures/mixed-languages/: requirements.yaml
fixtures/mixed-languages/src/: main.dart  main.go  main.js  main.py  main.rs  main.ts
fixtures/nested-dirs/: requirements.yaml
fixtures/nested-dirs/src/a/b/c/d/: file.rs
fixtures/orphans-project/: requirements.yaml  tasks.yaml
fixtures/orphans-project/src/: main.rs
fixtures/valid-project/: requirements.yaml  tasks.yaml
fixtures/valid-project/src/: main.rs
fixtures/valid-project/tests/: test_main.rs
scripts/: scan.sh  serve.sh
