[package]
name = "sdd-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "sdd_server"
path = "src/lib.rs"

[[bin]]
name = "sdd-server"
path = "src/main.rs"

[dependencies]
sdd-core = { path = "../sdd-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
axum-test = "20"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
